// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot test for /uzbek/articles/cxj3rjxm6r0o For the AMP platform I can see the server-rendered HTML 1`] = `
<html lang="uz-cyrl"
      dir="ltr"
      amp
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="uz-UZ"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи? - BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/uzbek/articles/cxj3rjxm6r0o"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcuzbek"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcuzbek"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи? - BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-07-12T14:34:24.846Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T14:34:24.846Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи? - BBC News O'zbek
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/uzbek/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/uzbek/articles/cxj3rjxm6r0o"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/uzbek/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            async
            custom-element="amp-bind"
            src="https://cdn.ampproject.org/v0/amp-bind-0.1.js"
    >
    </script>
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/uzbek/articles/cxj3rjxm6r0o","publisher":{"@type":"NewsMediaOrganization","name":"BBC News O'zbek","publishingPrinciples":"https://www.bbc.com/uzbek/institutional-50220995","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/uzbek/articles/cxj3rjxm6r0o","name":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"},"headline":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?","datePublished":"2019-07-12T14:34:24.846Z","dateModified":"2019-07-12T14:34:24.846Z","author":{"@type":"NewsMediaOrganization","name":"BBC News O'zbek","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"},"noBylinesPolicy":"https://www.bbc.com/uzbek/institutional-50220995#authorexpertise"}}
    </script>
    <style amp-boilerplate>
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript>
      <style amp-boilerplate>
        body{-webkit-animation:none;-moz-animation:none;-ms-animation:none;animation:none}
      </style>
    </noscript>
    <script async
            src="https://cdn.ampproject.org/v0.js"
    >
    </script>
    <script async
            custom-element="amp-geo"
            src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-consent"
            src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    >
    </script>
    <script async
            custom-element="amp-analytics"
            src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    >
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="AmpConsentWrapper-sc-18egs7-0 bfTTJR">
          <amp-geo layout="nodisplay">
            <script type="application/json">
              {"ISOCountryGroups":{"eea":["at","ax","be","bg","bl","cy","cz","de","dk","ea","ee","es","fi","fr","gb","gf","gg","gi","gp","gr","hr","hu","ic","ie","im","is","it","je","li","lt","lu","lv","mf","mq","mt","nc","nl","no","pf","pl","pm","pt","re","ro","se","si","sj","sk","tf","va","wf","yt"]}}
            </script>
          </amp-geo>
          <amp-consent id="consent"
                       layout="nodisplay"
          >
            <script type="application/json">
              {"consents":{"user-consent":{"promptIfUnknownForGeoGroup":"eea","promptUI":"consent-prompt"}}}
            </script>
            <div id="consent-prompt">
              <div dir="ltr"
                   id="privacy"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Биз шахсий ҳаёт махфийлиги ва Куки(Cookies)га оид сиёсатимизни янгиладик
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
                  >
                    Биз шахсий ҳаёт махфийлиги ва Куки(Cookie)га оид сиёсатимизга айрим муҳим ўзгаришларни киритдик. Ва бу нарса сиз ва сизнинг маълумотингиз учун нимани англатиши ҳақида сизни бохабар этиш истагидамиз.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 jLugbT"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:cookie.show, privacy.hide"
                      >
                        Маъқул
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/your-data-matters"
                         on="tap:cookie.show, privacy.hide"
                      >
                        Нималар ўзгарди?
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
              <div dir="ltr"
                   hidden
                   id="cookie"
                   class="Wrapper-sc-7g3fro-0 fOqUqv"
              >
                <div dir="ltr"
                     class="CenterWrapper-sc-7g3fro-1 ggwfud"
                >
                  <h2 dir="ltr"
                      class="Title-sc-7g3fro-2 iqsZpo"
                  >
                    Кукис(Cookies)га рози эканингизни билдиринг
                  </h2>
                  <p dir="ltr"
                     class="ConsentBannerText-sc-7g3fro-4 fkYBRU"
                  >
                    Биз
                    <a href="https://www.bbc.co.uk/usingthebbc/cookies/what-do-i-need-to-know-about-cookies/">
                      кукидан
                    </a>
                    сизга янада яхшироқ онлайн имконият бериш мақсадида фойдаланамиз. Марҳамат қилиб ушбу барча кукиларга розилигингизни билдиринг.
                  </p>
                  <ul dir="ltr"
                      class="Options-sc-7g3fro-3 jLugbT"
                  >
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <button type="button"
                              on="tap:consent.accept"
                              data-cookie-banner="accept"
                      >
                        Ҳа, мен розиман
                      </button>
                    </li>
                    <li dir="ltr"
                        class="ListItem-sc-7g3fro-5 iOzCnw"
                    >
                      <a href="https://www.bbc.co.uk/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                         on="tap:consent.reject"
                         data-cookie-banner="reject"
                      >
                        Йўқ, мени ўзгартириш саҳифасига етакланг
                      </a>
                    </li>
                  </ul>
                </div>
              </div>
            </div>
          </amp-consent>
        </div>
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/uzbek"
               class="StyledLink-m3awbo-2 cmbfGD"
            >
              <svg height="24"
                   viewbox="0 0 238.99 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fTrFbY"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M200.58 6.28h9.12l-6.76 9.25h6.76v1.35h-9.55l6.77-9.25h-6.34zM211.82 16.87V6.29h3.07a4.12 4.12 0 0 1 1.47.23 3 3 0 0 1 1 .61A2.38 2.38 0 0 1 218 8a2.72 2.72 0 0 1 .19 1 2.33 2.33 0 0 1-.39 1.37 2.68 2.68 0 0 1-1.23.89 4 4 0 0 1 1.06.36 2.85 2.85 0 0 1 .8.6 2.5 2.5 0 0 1 .5.81 2.76 2.76 0 0 1 0 2 2.48 2.48 0 0 1-.62.91 3.26 3.26 0 0 1-1.12.67 4.86 4.86 0 0 1-1.68.26zm1.51-9.21v3.16h1a2.8 2.8 0 0 0 1.69-.41 1.5 1.5 0 0 0 .55-1.28 1.75 1.75 0 0 0-.09-.56 1.13 1.13 0 0 0-.31-.47 1.57 1.57 0 0 0-.57-.32 2.72 2.72 0 0 0-.87-.12zm0 4.54v3.32h1.91a3.42 3.42 0 0 0 1.11-.15A2 2 0 0 0 217 15a1.31 1.31 0 0 0 .36-.54 1.83 1.83 0 0 0 .1-.59 1.54 1.54 0 0 0-.14-.66 1.38 1.38 0 0 0-.43-.52 2.15 2.15 0 0 0-.73-.34 3.92 3.92 0 0 0-1-.12zM227.28 6.29v1.37h-4.48v3.2h4.33v1.37h-4.33v3.29h4.63v1.36h-6.14V6.29zM236 6.29h1.89l-4.59 5 5.7 5.58h-2.07l-5.41-5.22v5.22H230V6.29h1.51v4.84zM189.7 6.14a5.69 5.69 0 0 1 4.08 1.55 5.15 5.15 0 0 1 1.63 3.89 5.07 5.07 0 0 1-1.65 3.87 5.85 5.85 0 0 1-4.14 1.55 5.52 5.52 0 0 1-4-1.53 5.11 5.11 0 0 1-1.62-3.85 5.23 5.23 0 0 1 1.6-3.92 5.59 5.59 0 0 1 4.1-1.56zm.06 1.44a4.1 4.1 0 0 0-3 1.14 3.87 3.87 0 0 0-1.17 2.9 3.8 3.8 0 0 0 1.17 2.85 4.35 4.35 0 0 0 5.89 0 3.87 3.87 0 0 0 1.18-2.88 3.78 3.78 0 0 0-1.18-2.83 4 4 0 0 0-2.88-1.18z">
                  </path>
                  <path d="M198.46 6.16v.23a2.22 2.22 0 0 0-.65 1.5.89.89 0 0 0 0 .17 1 1 0 0 1 .81 1 .84.84 0 0 1-.28.64 1 1 0 0 1-.67.26.89.89 0 0 1-.76-.38 1.7 1.7 0 0 1-.28-1 2.31 2.31 0 0 1 1.83-2.42z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                O'zbek
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Саҳифага ўтиш
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             id="si-nav"
             class="StyledNav-sc-158x7z5-5 jTxPjl"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <amp-state id="menuState">
              <script type="application/json">
                {"expanded":false}
              </script>
            </amp-state>
            <button type="button"
                    aria-expanded="false"
                    data-amp-bind-aria-expanded="menuState.expanded ? &quot;true&quot; : &quot;false&quot;"
                    on="tap:AMP.setState({ menuState: { expanded: !menuState.expanded }}),
        si-nav-dropdown-menu.toggleVisibility,
        si-nav-scrollable.toggleClass(class=si-nav-scrollable-hidden),
        si-nav.toggleClass(class=si-nav-open)
      "
                    dir="ltr"
                    class="MenuButton-ukxuly-6 dGlJrg"
            >
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   data-amp-bind-hidden="menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                </path>
              </svg>
              <svg focusable="false"
                   width="2.75rem"
                   height="2.75rem"
                   viewbox="0 0 44 44"
                   aria-hidden="true"
                   hidden
                   data-amp-bind-hidden="!menuState.expanded"
                   class="MenuIcon-sc-1nq0eki-0 gKIQph"
              >
                <path d="M26.741 15L21.6 20.142 16.458 15 15 16.458l5.142 5.142L15 26.742l1.458 1.458 5.142-5.141 5.141 5.141 1.459-1.458-5.142-5.142 5.142-5.142z"
                      fill-rule="evenodd"
                >
                </path>
              </svg>
              <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                Бўлимлар
              </span>
            </button>
            <div id="si-nav-dropdown-menu"
                 hidden
                 class="AmpDropdown-ukxuly-1 dMLYwY"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Бош саҳифа
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/lotin"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Lotinda
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/uzbekistan"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Ўзбекистон
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/central_asia"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Минтақа
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/world"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Дунё
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/sport"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Спорт
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Илм-Фан
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Технология
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/media/video"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Видео
                  </a>
                </li>
              </ul>
            </div>
            <div dir="ltr"
                 id="si-nav-scrollable"
                 class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz StyledAmpScrollableNavigation-thcau0-0 eHufvQ"
            >
              <ul role="list"
                  class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
              >
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Бош саҳифа
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/lotin"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Lotinda
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/uzbekistan"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Ўзбекистон
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/central_asia"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Минтақа
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/world"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Дунё
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/sport"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Спорт
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Илм-Фан
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Технология
                  </a>
                </li>
                <li dir="ltr"
                    role="listitem"
                    class="StyledListItem-sc-158x7z5-3 COeze"
                >
                  <a href="/uzbek/media/video"
                     class="StyledLink-sc-158x7z5-2 gLWckh"
                  >
                    Видео
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <amp-analytics>
        <script type="application/json">
          {"transport":{"beacon":false,"xhrpost":false,"image":true},"requests":{"base":"https://logws1363.ati-host.net?","pageview":"\${base}s=598343&s2=96&p=uzbek.articles.cxj3rjxm6r0o.page&r=\${screenWidth}x\${screenHeight}x\${screenColorDepth}&re=\${availableScreenWidth}x\${availableScreenHeight}&hl=\${timestamp}&lng=\${browserLanguage}&x1=[urn:bbc:optimo:cxj3rjxm6r0o]&x2=[amp]&x3=[news-uzbek]&x4=[uz-cyrl]&x5=[\${sourceUrl}]&x6=[\${documentReferrer}]&x7=[article]&x8=[simorgh]&x9=[Ўзбекистон:+«Энергетик+таъмли+ичимлик»+нима+ўзи?]&x11=[2019-07-12T14:34:24.846Z]&x12=[2019-07-12T14:34:24.846Z]"},"triggers":{"trackPageview":{"on":"visible","request":"pageview"}}}
        </script>
      </amp-analytics>
      <amp-analytics type="chartbeat">
        <script type="application/json">
          {"vars":{"domain":"test.bbc.co.uk","sections":"Uzbek, Uzbek - ART","uid":50924,"title":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?","virtualReferrer":"\${documentReferrer}","contentType":"New Article"}}
        </script>
      </amp-analytics>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 jsOCZS"
            >
              Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?
            </h1>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              12 июл 2019
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ўтган йилнинг декабрь ойида «Озиқ-овқат маҳсулотининг сифати ва хавфсизлиги тўғрисида»ги қонунга киритилган ўзгартиришда тобора оммалашаётган «энергетик ичимликлар» тушунчасига илк бор изоҳ берилди.
            </p>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              "Энергетик ичимликлар - таркибида 150 мг/л.дан ортиқ миқдорда кофеин ва (ёки) инсон организмига тонусни ўзгартирувчи таъсир кўрсатиш учун етарли миқдордаги бошқа компонентлар мавжуд бўлган ичимликлар" дейилади қонунда.
            </p>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Аммо одамлар энергетик ичимликлар аслида нима эканидан қанчалик хабардор? Уларнинг салбий ёки ижобий таъсирлари тўғрисида нималар маълум?
            </p>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ҳозирда энергетик ичимликларнинг саломатликка таъсири борасида турли бир-бирига зид қарашлар мавжуд.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/uzbek"
               class="StyledLink-m3awbo-2 cmbfGD"
            >
              <svg height="24"
                   viewbox="0 0 238.99 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fTrFbY"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M200.58 6.28h9.12l-6.76 9.25h6.76v1.35h-9.55l6.77-9.25h-6.34zM211.82 16.87V6.29h3.07a4.12 4.12 0 0 1 1.47.23 3 3 0 0 1 1 .61A2.38 2.38 0 0 1 218 8a2.72 2.72 0 0 1 .19 1 2.33 2.33 0 0 1-.39 1.37 2.68 2.68 0 0 1-1.23.89 4 4 0 0 1 1.06.36 2.85 2.85 0 0 1 .8.6 2.5 2.5 0 0 1 .5.81 2.76 2.76 0 0 1 0 2 2.48 2.48 0 0 1-.62.91 3.26 3.26 0 0 1-1.12.67 4.86 4.86 0 0 1-1.68.26zm1.51-9.21v3.16h1a2.8 2.8 0 0 0 1.69-.41 1.5 1.5 0 0 0 .55-1.28 1.75 1.75 0 0 0-.09-.56 1.13 1.13 0 0 0-.31-.47 1.57 1.57 0 0 0-.57-.32 2.72 2.72 0 0 0-.87-.12zm0 4.54v3.32h1.91a3.42 3.42 0 0 0 1.11-.15A2 2 0 0 0 217 15a1.31 1.31 0 0 0 .36-.54 1.83 1.83 0 0 0 .1-.59 1.54 1.54 0 0 0-.14-.66 1.38 1.38 0 0 0-.43-.52 2.15 2.15 0 0 0-.73-.34 3.92 3.92 0 0 0-1-.12zM227.28 6.29v1.37h-4.48v3.2h4.33v1.37h-4.33v3.29h4.63v1.36h-6.14V6.29zM236 6.29h1.89l-4.59 5 5.7 5.58h-2.07l-5.41-5.22v5.22H230V6.29h1.51v4.84zM189.7 6.14a5.69 5.69 0 0 1 4.08 1.55 5.15 5.15 0 0 1 1.63 3.89 5.07 5.07 0 0 1-1.65 3.87 5.85 5.85 0 0 1-4.14 1.55 5.52 5.52 0 0 1-4-1.53 5.11 5.11 0 0 1-1.62-3.85 5.23 5.23 0 0 1 1.6-3.92 5.59 5.59 0 0 1 4.1-1.56zm.06 1.44a4.1 4.1 0 0 0-3 1.14 3.87 3.87 0 0 0-1.17 2.9 3.8 3.8 0 0 0 1.17 2.85 4.35 4.35 0 0 0 5.89 0 3.87 3.87 0 0 0 1.18-2.88 3.78 3.78 0 0 0-1.18-2.83 4 4 0 0 0-2.88-1.18z">
                  </path>
                  <path d="M198.46 6.16v.23a2.22 2.22 0 0 0-.65 1.5.89.89 0 0 0 0 .17 1 1 0 0 1 .81 1 .84.84 0 0 1-.28.64 1 1 0 0 1-.67.26.89.89 0 0 1-.76-.38 1.7 1.7 0 0 1-.28-1 2.31 2.31 0 0 1 1.83-2.42z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                O'zbek
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 bmlrLC"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-50220995"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Нега сиз Би-би-сига ишонишингиз мумкин?
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-36824297"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Фойдаланиш шартлари
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-36824300"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Шахсий ҳаёт махфийлиги сиёсати
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Куки(Cookies)
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-36826360"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Би-би-си билан боғланиш
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. Би-би-си ташқи сайтлар мазмуни учун масъул эмас.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Ташқи линкларга бизнинг ёндашувимиз қандайлиги ҳақида маълумотга эга бўлинг
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
  </body>
</html>
`;

exports[`Snapshot test for /uzbek/articles/cxj3rjxm6r0o For the Canonical platform I can see the server-rendered HTML 1`] = `
<html lang="uz-cyrl"
      class="no-js"
      dir="ltr"
>
  <head>
    <meta data-react-helmet="true"
          http-equiv="X-UA-Compatible"
          content="IE=edge"
    >
    <meta data-react-helmet="true"
          charset="utf-8"
    >
    <meta data-react-helmet="true"
          name="robots"
          content="noodp,noydir"
    >
    <meta data-react-helmet="true"
          name="theme-color"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="viewport"
          content="width=device-width, initial-scale=1, minimum-scale=1"
    >
    <meta data-react-helmet="true"
          name="apple-mobile-web-app-title"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="application-name"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="description"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"
    >
    <meta data-react-helmet="true"
          property="fb:admins"
          content="100004154058350"
    >
    <meta data-react-helmet="true"
          property="fb:app_id"
          content="1609039196070050"
    >
    <meta data-react-helmet="true"
          name="mobile-web-app-capable"
          content="yes"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileColor"
          content="#B80000"
    >
    <meta data-react-helmet="true"
          name="msapplication-TileImage"
          content="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-144x144.png"
    >
    <meta data-react-helmet="true"
          property="og:description"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"
    >
    <meta data-react-helmet="true"
          property="og:image"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"
    >
    <meta data-react-helmet="true"
          property="og:image:alt"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          property="og:locale"
          content="uz-UZ"
    >
    <meta data-react-helmet="true"
          property="og:site_name"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          property="og:title"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи? - BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          property="og:type"
          content="article"
    >
    <meta data-react-helmet="true"
          property="og:url"
          content="http://localhost:7080/uzbek/articles/cxj3rjxm6r0o"
    >
    <meta data-react-helmet="true"
          name="twitter:card"
          content="summary_large_image"
    >
    <meta data-react-helmet="true"
          name="twitter:creator"
          content="@bbcuzbek"
    >
    <meta data-react-helmet="true"
          name="twitter:description"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"
    >
    <meta data-react-helmet="true"
          name="twitter:image:alt"
          content="BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="twitter:image:src"
          content="https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"
    >
    <meta data-react-helmet="true"
          name="twitter:site"
          content="@bbcuzbek"
    >
    <meta data-react-helmet="true"
          name="twitter:title"
          content="Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи? - BBC News O'zbek"
    >
    <meta data-react-helmet="true"
          name="article:author"
          content="https://www.facebook.com/bbcnews"
    >
    <meta data-react-helmet="true"
          name="article:modified_time"
          content="2019-07-12T14:34:24.846Z"
    >
    <meta data-react-helmet="true"
          name="article:published_time"
          content="2019-07-12T14:34:24.846Z"
    >
    <link rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <link rel="preconnect"
          href="https://ichef.bbci.co.uk"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://ichef.bbci.co.uk"
    >
    <link rel="preconnect"
          href="http://localhost:7080"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="http://localhost:7080"
    >
    <link rel="preconnect"
          href="https://logws1363.ati-host.net?"
          crossorigin="anonymous"
    >
    <link rel="dns-prefetch"
          href="https://logws1363.ati-host.net?"
    >
    <title data-react-helmet="true">
      Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи? - BBC News O'zbek
    </title>
    <link data-react-helmet="true"
          rel="manifest"
          href="/uzbek/manifest.json"
    >
    <link data-react-helmet="true"
          rel="canonical"
          href="http://localhost:7080/uzbek/articles/cxj3rjxm6r0o"
    >
    <link data-react-helmet="true"
          rel="amphtml"
          href="http://localhost:7080/uzbek/articles/cxj3rjxm6r0o.amp"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          href="http://localhost:7080/uzbek/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="72x72"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-72x72.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="96x96"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-96x96.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="128x128"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-128x128.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="144x144"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-144x144.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="152x152"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-152x152.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="192x192"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-192x192.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="384x384"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-384x384.png"
    >
    <link data-react-helmet="true"
          rel="apple-touch-icon"
          sizes="512x512"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-72x72.png"
          sizes="72x72"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-96x96.png"
          sizes="96x96"
    >
    <link data-react-helmet="true"
          rel="icon"
          type="image/png"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-192x192.png"
          sizes="192x192"
    >
    <link data-react-helmet="true"
          rel="apple-touch-startup-image"
          href="https://news.files.bbci.co.uk/include/articles/public/uzbek/images/icons/icon-512x512.png"
    >
    <link data-react-helmet="true"
          rel="shortcut icon"
          href="/favicon.ico"
          type="image/x-icon"
    >
    <script data-react-helmet="true"
            type="application/ld+json"
    >
      {"@context":"http://schema.org","@type":"Article","url":"http://localhost:7080/uzbek/articles/cxj3rjxm6r0o","publisher":{"@type":"NewsMediaOrganization","name":"BBC News O'zbek","publishingPrinciples":"https://www.bbc.com/uzbek/institutional-50220995","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"}},"image":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"},"thumbnailUrl":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png","mainEntityOfPage":{"@type":"WebPage","@id":"http://localhost:7080/uzbek/articles/cxj3rjxm6r0o","name":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"},"headline":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?","datePublished":"2019-07-12T14:34:24.846Z","dateModified":"2019-07-12T14:34:24.846Z","author":{"@type":"NewsMediaOrganization","name":"BBC News O'zbek","logo":{"@type":"ImageObject","width":1024,"height":576,"url":"https://news.files.bbci.co.uk/ws/img/logos/og/uzbek.png"},"noBylinesPolicy":"https://www.bbc.com/uzbek/institutional-50220995#authorexpertise"}}
    </script>
  </head>
  <body>
    <div id="root"
         class="StyledDiv-sc-1dngwtn-0 riLLS"
    >
      <header role="banner">
        <div class="Banner-m3awbo-1 fDRnKv">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/uzbek"
               class="StyledLink-m3awbo-2 cmbfGD"
            >
              <svg height="24"
                   viewbox="0 0 238.99 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fTrFbY"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M200.58 6.28h9.12l-6.76 9.25h6.76v1.35h-9.55l6.77-9.25h-6.34zM211.82 16.87V6.29h3.07a4.12 4.12 0 0 1 1.47.23 3 3 0 0 1 1 .61A2.38 2.38 0 0 1 218 8a2.72 2.72 0 0 1 .19 1 2.33 2.33 0 0 1-.39 1.37 2.68 2.68 0 0 1-1.23.89 4 4 0 0 1 1.06.36 2.85 2.85 0 0 1 .8.6 2.5 2.5 0 0 1 .5.81 2.76 2.76 0 0 1 0 2 2.48 2.48 0 0 1-.62.91 3.26 3.26 0 0 1-1.12.67 4.86 4.86 0 0 1-1.68.26zm1.51-9.21v3.16h1a2.8 2.8 0 0 0 1.69-.41 1.5 1.5 0 0 0 .55-1.28 1.75 1.75 0 0 0-.09-.56 1.13 1.13 0 0 0-.31-.47 1.57 1.57 0 0 0-.57-.32 2.72 2.72 0 0 0-.87-.12zm0 4.54v3.32h1.91a3.42 3.42 0 0 0 1.11-.15A2 2 0 0 0 217 15a1.31 1.31 0 0 0 .36-.54 1.83 1.83 0 0 0 .1-.59 1.54 1.54 0 0 0-.14-.66 1.38 1.38 0 0 0-.43-.52 2.15 2.15 0 0 0-.73-.34 3.92 3.92 0 0 0-1-.12zM227.28 6.29v1.37h-4.48v3.2h4.33v1.37h-4.33v3.29h4.63v1.36h-6.14V6.29zM236 6.29h1.89l-4.59 5 5.7 5.58h-2.07l-5.41-5.22v5.22H230V6.29h1.51v4.84zM189.7 6.14a5.69 5.69 0 0 1 4.08 1.55 5.15 5.15 0 0 1 1.63 3.89 5.07 5.07 0 0 1-1.65 3.87 5.85 5.85 0 0 1-4.14 1.55 5.52 5.52 0 0 1-4-1.53 5.11 5.11 0 0 1-1.62-3.85 5.23 5.23 0 0 1 1.6-3.92 5.59 5.59 0 0 1 4.1-1.56zm.06 1.44a4.1 4.1 0 0 0-3 1.14 3.87 3.87 0 0 0-1.17 2.9 3.8 3.8 0 0 0 1.17 2.85 4.35 4.35 0 0 0 5.89 0 3.87 3.87 0 0 0 1.18-2.88 3.78 3.78 0 0 0-1.18-2.83 4 4 0 0 0-2.88-1.18z">
                  </path>
                  <path d="M198.46 6.16v.23a2.22 2.22 0 0 0-.65 1.5.89.89 0 0 0 0 .17 1 1 0 0 1 .81 1 .84.84 0 0 1-.28.64 1 1 0 0 1-.67.26.89.89 0 0 1-.76-.38 1.7 1.7 0 0 1-.28-1 2.31 2.31 0 0 1 1.83-2.42z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                O'zbek
              </span>
            </a>
            <a dir="ltr"
               href="#content"
               class="SkipLink-wmpyxz-0 foxPXR"
            >
              Саҳифага ўтиш
            </a>
          </div>
        </div>
        <nav role="navigation"
             dir="ltr"
             class="StyledNav-sc-158x7z5-5 dWucaK"
        >
          <div class="NavWrapper-sc-158x7z5-0 ermFdP">
            <div class="ScrollableWrapper-t4argr-0 UDeIc">
              <button type="button"
                      aria-expanded="false"
                      dir="ltr"
                      class="MenuButton-ukxuly-6 dGlJrg"
              >
                <svg focusable="false"
                     width="2.75rem"
                     height="2.75rem"
                     viewbox="0 0 44 44"
                     aria-hidden="true"
                     class="MenuIcon-sc-1nq0eki-0 gKIQph"
                >
                  <path d="M12 29h21v-2.333H12V29zm0-5.833h21v-2.334H12v2.334zM12 15v2.333h21V15H12z">
                  </path>
                </svg>
                <span class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX">
                  Бўлимлар
                </span>
              </button>
              <div dir="ltr"
                   class="StyledScrollableNav-sc-1nc6e54-0 hGNZJz"
              >
                <ul role="list"
                    class="StyledUnorderedList-sc-158x7z5-1 ckFfoH"
                >
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Бош саҳифа
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/lotin"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Lotinda
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/uzbekistan"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Ўзбекистон
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/central_asia"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Минтақа
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/world"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Дунё
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/sport"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Спорт
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Илм-Фан
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Технология
                    </a>
                  </li>
                  <li dir="ltr"
                      role="listitem"
                      class="StyledListItem-sc-158x7z5-3 COeze"
                  >
                    <a href="/uzbek/media/video"
                       class="StyledLink-sc-158x7z5-2 gLWckh"
                    >
                      Видео
                    </a>
                  </li>
                </ul>
              </div>
            </div>
            <div height="0"
                 class="StyledDropdown-ukxuly-0 NlGZD"
            >
              <ul role="list"
                  class="DropdownUl-ukxuly-2 louIo"
              >
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Бош саҳифа
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/lotin"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Lotinda
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/uzbekistan"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Ўзбекистон
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/central_asia"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Минтақа
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/world"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Дунё
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/sport"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Спорт
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/topics/0f469e6a-d4a6-46f2-b727-2bd039cb6b53"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Илм-Фан
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/topics/31684f19-84d6-41f6-b033-7ae08098572a"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Технология
                  </a>
                </li>
                <li role="listitem"
                    class="StyledDropdownLi-ukxuly-3 dIsymM"
                >
                  <a href="/uzbek/media/video"
                     class="StyledDropdownLink-ukxuly-4 ikLbnY"
                  >
                    Видео
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
      <noscript>
        <img height="1px"
             width="1px"
             alt
             style="position:absolute"
             src="https://logws1363.ati-host.net?s=598343&amp;s2=96&amp;p=uzbek.articles.cxj3rjxm6r0o.page&amp;x1=[urn:bbc:optimo:cxj3rjxm6r0o]&amp;x2=[responsive]&amp;x3=[news-uzbek]&amp;x4=[uz-cyrl]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Ўзбекистон:+«Энергетик+таъмли+ичимлик»+нима+ўзи?]&amp;x11=[2019-07-12T14:34:24.846Z]&amp;x12=[2019-07-12T14:34:24.846Z]"
        >
      </noscript>
      <main role="main"
            class="StyledMain-sc-1onvfv8-0 hAQCOp"
      >
        <div class="GridWrapper-sc-12lwanc-0 hgpaqH">
          <div class="GridItemConstrainedLarge-sc-12lwanc-4 gVouae">
            <h1 id="content"
                tabindex="-1"
                class="Headline-sc-1kh1qhu-0 StyledHeadline-sc-1ffcmag-0 jsOCZS"
            >
              Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?
            </h1>
          </div>
          <div class="PopOutAtGroup5-sc-12lwanc-13 fvtaWN">
            <time datetime="2019-07-12"
                  class="StyledTimestamp-um718p-0 bAgcOD"
            >
              12 июл 2019
            </time>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ўтган йилнинг декабрь ойида «Озиқ-овқат маҳсулотининг сифати ва хавфсизлиги тўғрисида»ги қонунга киритилган ўзгартиришда тобора оммалашаётган «энергетик ичимликлар» тушунчасига илк бор изоҳ берилди.
            </p>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              "Энергетик ичимликлар - таркибида 150 мг/л.дан ортиқ миқдорда кофеин ва (ёки) инсон организмига тонусни ўзгартирувчи таъсир кўрсатиш учун етарли миқдордаги бошқа компонентлар мавжуд бўлган ичимликлар" дейилади қонунда.
            </p>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Аммо одамлар энергетик ичимликлар аслида нима эканидан қанчалик хабардор? Уларнинг салбий ёки ижобий таъсирлари тўғрисида нималар маълум?
            </p>
          </div>
          <div class="GridItemConstrainedMedium-sc-12lwanc-2 fVauYi">
            <p class="Paragraph-k859h4-0 hymSIv">
              Ҳозирда энергетик ичимликларнинг саломатликка таъсири борасида турли бир-бирига зид қарашлар мавжуд.
            </p>
          </div>
        </div>
      </main>
      <footer role="contentinfo">
        <div class="Banner-m3awbo-1 gpxnCd">
          <div class="SvgWrapper-m3awbo-0 dPXtDJ">
            <a href="/uzbek"
               class="StyledLink-m3awbo-2 cmbfGD"
            >
              <svg height="24"
                   viewbox="0 0 238.99 24"
                   xmlns="http://www.w3.org/2000/svg"
                   focusable="false"
                   aria-hidden="true"
                   class="BrandSvg-m3awbo-3 fTrFbY"
              >
                <g fill-rule="evenodd"
                   stroke="#000"
                   stroke-width=".335"
                   style="stroke:#fff"
                >
                  <path d="M76.73.28v21.85H53.51V.28zm-4.62 14.58l-.37.23a10.85 10.85 0 0 1-5.53 1.69c-3.8 0-6.31-2.27-6.32-5.55s2.62-5.58 6.22-5.59a10.93 10.93 0 0 1 5.47 1.56l.36.2V4.47l-.16-.06a15.06 15.06 0 0 0-5.65-1.27 9.62 9.62 0 0 0-6.53 2.34 7.9 7.9 0 0 0-2.59 6 7.7 7.7 0 0 0 2.16 5.17A9.1 9.1 0 0 0 66 19.28a12.73 12.73 0 0 0 6-1.37l.14-.07zM50 .28v21.85H26.75V.28zm-5.54 14.48A4.21 4.21 0 0 0 41 10.69a3.87 3.87 0 0 0 1.35-1.08A3.41 3.41 0 0 0 43 7.47a3.8 3.8 0 0 0-1.27-2.85 5.76 5.76 0 0 0-4-1.29h-4.89v15.75h5.81a6.54 6.54 0 0 0 4.46-1.39 3.88 3.88 0 0 0 1.35-2.93z">
                  </path>
                  <path d="M41.57 14.45a1.86 1.86 0 0 1-.63 1.45 3.85 3.85 0 0 1-2.6.72h-2.68v-4.3h2.56a4.45 4.45 0 0 1 2.57.62 1.76 1.76 0 0 1 .78 1.51zM39.4 9.31a1.84 1.84 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57h-1.9v4.07H37a4.21 4.21 0 0 0 2.4-.56zM23.22.28v21.85H0V.28zM17.7 14.76a4.21 4.21 0 0 0-3.43-4.07 3.86 3.86 0 0 0 1.35-1.08 3.41 3.41 0 0 0 .65-2.13A3.8 3.8 0 0 0 15 4.63a5.76 5.76 0 0 0-4-1.29H6v15.74h5.9a6.54 6.54 0 0 0 4.46-1.39 3.89 3.89 0 0 0 1.34-2.93z">
                  </path>
                  <path d="M12.64 9.31a1.85 1.85 0 0 0 .74-1.63 1.66 1.66 0 0 0-.53-1.31 3 3 0 0 0-2.05-.57H8.91v4.07h1.3a4.21 4.21 0 0 0 2.43-.56zM14 12.94a4.45 4.45 0 0 0-2.57-.62H8.91v4.29h2.68a3.85 3.85 0 0 0 2.6-.72 1.86 1.86 0 0 0 .63-1.45 1.76 1.76 0 0 0-.82-1.5zM101 3.34h2.15v15.78h-1.94L90.69 7v12.12h-2.12V3.34h1.83L101 15.6zM107.26 3.34h8.95v2h-6.69v4.81H116v2h-6.46v4.9h6.9v2h-9.16zM140.33 3.34h2.25l-6.38 15.85h-.5l-5.16-12.84-5.21 12.84h-.49l-6.36-15.85h2.28l4.35 10.88 4.38-10.88h2.14L136 14.22zM148.7 12.51l-1.72-1a7.8 7.8 0 0 1-2.3-1.94 3.68 3.68 0 0 1-.68-2.2 3.88 3.88 0 0 1 1.29-3 4.83 4.83 0 0 1 3.36-1.16 6.36 6.36 0 0 1 3.63 1.11v2.49a5.23 5.23 0 0 0-3.67-1.64 3 3 0 0 0-1.82.51 1.55 1.55 0 0 0-.71 1.32 2 2 0 0 0 .52 1.33 6.6 6.6 0 0 0 1.69 1.3l1.73 1q2.89 1.73 2.89 4.39a4 4 0 0 1-1.27 3.08 4.65 4.65 0 0 1-3.3 1.19 6.94 6.94 0 0 1-4.26-1.44V15a5.32 5.32 0 0 0 4.24 2.32 2.66 2.66 0 0 0 1.77-.59 1.85 1.85 0 0 0 .71-1.48q-.02-1.45-2.1-2.74z">
                  </path>
                  <path d="M168.37 0v22.59"
                        stroke-width="2"
                  >
                  </path>
                  <path d="M200.58 6.28h9.12l-6.76 9.25h6.76v1.35h-9.55l6.77-9.25h-6.34zM211.82 16.87V6.29h3.07a4.12 4.12 0 0 1 1.47.23 3 3 0 0 1 1 .61A2.38 2.38 0 0 1 218 8a2.72 2.72 0 0 1 .19 1 2.33 2.33 0 0 1-.39 1.37 2.68 2.68 0 0 1-1.23.89 4 4 0 0 1 1.06.36 2.85 2.85 0 0 1 .8.6 2.5 2.5 0 0 1 .5.81 2.76 2.76 0 0 1 0 2 2.48 2.48 0 0 1-.62.91 3.26 3.26 0 0 1-1.12.67 4.86 4.86 0 0 1-1.68.26zm1.51-9.21v3.16h1a2.8 2.8 0 0 0 1.69-.41 1.5 1.5 0 0 0 .55-1.28 1.75 1.75 0 0 0-.09-.56 1.13 1.13 0 0 0-.31-.47 1.57 1.57 0 0 0-.57-.32 2.72 2.72 0 0 0-.87-.12zm0 4.54v3.32h1.91a3.42 3.42 0 0 0 1.11-.15A2 2 0 0 0 217 15a1.31 1.31 0 0 0 .36-.54 1.83 1.83 0 0 0 .1-.59 1.54 1.54 0 0 0-.14-.66 1.38 1.38 0 0 0-.43-.52 2.15 2.15 0 0 0-.73-.34 3.92 3.92 0 0 0-1-.12zM227.28 6.29v1.37h-4.48v3.2h4.33v1.37h-4.33v3.29h4.63v1.36h-6.14V6.29zM236 6.29h1.89l-4.59 5 5.7 5.58h-2.07l-5.41-5.22v5.22H230V6.29h1.51v4.84zM189.7 6.14a5.69 5.69 0 0 1 4.08 1.55 5.15 5.15 0 0 1 1.63 3.89 5.07 5.07 0 0 1-1.65 3.87 5.85 5.85 0 0 1-4.14 1.55 5.52 5.52 0 0 1-4-1.53 5.11 5.11 0 0 1-1.62-3.85 5.23 5.23 0 0 1 1.6-3.92 5.59 5.59 0 0 1 4.1-1.56zm.06 1.44a4.1 4.1 0 0 0-3 1.14 3.87 3.87 0 0 0-1.17 2.9 3.8 3.8 0 0 0 1.17 2.85 4.35 4.35 0 0 0 5.89 0 3.87 3.87 0 0 0 1.18-2.88 3.78 3.78 0 0 0-1.18-2.83 4 4 0 0 0-2.88-1.18z">
                  </path>
                  <path d="M198.46 6.16v.23a2.22 2.22 0 0 0-.65 1.5.89.89 0 0 0 0 .17 1 1 0 0 1 .81 1 .84.84 0 0 1-.28.64 1 1 0 0 1-.67.26.89.89 0 0 1-.76-.38 1.7 1.7 0 0 1-.28-1 2.31 2.31 0 0 1 1.83-2.42z">
                  </path>
                </g>
              </svg>
              <span role="text"
                    class="VisuallyHiddenText-sc-1yjwwa5-0 jFfEvX"
              >
                <span lang="en-GB">
                  BBC News
                </span>
                ,
                O'zbek
              </span>
            </a>
          </div>
        </div>
        <div class="SitewideLinksWrapper-sc-1gggobt-0 gccobV">
          <div class="ConstrainedWrapper-sc-1gggobt-1 bpERjU">
            <ul role="list"
                class="StyledList-sc-2e1ekc-0 bmlrLC"
            >
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-50220995"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Нега сиз Би-би-сига ишонишингиз мумкин?
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-36824297"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Фойдаланиш шартлари
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-36824300"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Шахсий ҳаёт махфийлиги сиёсати
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/usingthebbc/cookies/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Куки(Cookies)
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a href="https://www.bbc.com/uzbek/institutional-36826360"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    Би-би-си билан боғланиш
                  </span>
                </a>
              </li>
              <li role="listitem"
                  class="StyledListItem-sc-2e1ekc-1 kUOQdM"
              >
                <a lang="en-GB"
                   href="https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/"
                   class="StyledLink-nhmg8j-0 dHbSzF"
                >
                  <span class="StyleLinkText-nhmg8j-1 fPnERB">
                    AdChoices / Do Not Sell My Info
                  </span>
                </a>
              </li>
            </ul>
            <p class="StyledParagraph-sc-1gggobt-2 jQPFnr">
              <span lang="en-GB">
                ©
              </span>
              2020 BBC. Би-би-си ташқи сайтлар мазмуни учун масъул эмас.
              <a href="https://www.bbc.co.uk/help/web/links/"
                 class="StyledLink-nhmg8j-0 jHQlUp"
              >
                <span class="StyleLinkText-nhmg8j-1 fPnERB">
                  Ташқи линкларга бизнинг ёндашувимиз қандайлиги ҳақида маълумотга эга бўлинг
                </span>
              </a>
            </p>
          </div>
        </div>
      </footer>
    </div>
    <script>
      window.SIMORGH_DATA={"status":200,"pageData":{"metadata":{"id":"mock-id","locators":{"optimoUrn":"urn:bbc:optimo:asset:cxj3rjxm6r0o"},"type":"article","createdBy":"Uzbek","language":"uz-cyrl","lastUpdated":1562942067289,"firstPublished":1562942064846,"lastPublished":1562942064846,"options":{},"analyticsLabels":{},"passport":{"language":"uz-cyrl","home":"http://www.bbc.co.uk/ontologies/passport/home/Uzbek"},"tags":{},"version":"v1.1.0","blockTypes":["headline","text","paragraph","fragment"]},"content":{"model":{"blocks":[{"type":"headline","model":{"blocks":[{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?","blocks":[{"type":"fragment","model":{"text":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?","attributes":[]},"id":"mock-id","position":[1,1,1,1]}]},"id":"mock-id","position":[1,1,1]}]},"id":"mock-id","position":[1,1]}]},"id":"mock-id","position":[1]},{"type":"timestamp","model":{"firstPublished":1562942064846,"lastPublished":1562942064846},"id":"mock-id","position":[2]},{"type":"text","model":{"blocks":[{"type":"paragraph","model":{"text":"Ўтган йилнинг декабрь ойида «Озиқ-овқат маҳсулотининг сифати ва хавфсизлиги тўғрисида»ги қонунга киритилган ўзгартиришда тобора оммалашаётган «энергетик ичимликлар» тушунчасига илк бор изоҳ берилди.","blocks":[{"type":"fragment","model":{"text":"Ўтган йилнинг декабрь ойида «Озиқ-овқат маҳсулотининг сифати ва хавфсизлиги тўғрисида»ги қонунга киритилган ўзгартиришда тобора оммалашаётган «энергетик ичимликлар» тушунчасига илк бор изоҳ берилди.","attributes":[]},"id":"mock-id","position":[3,1,1]}]},"id":"mock-id","position":[3,1]},{"type":"paragraph","model":{"text":"\\"Энергетик ичимликлар - таркибида 150 мг/л.дан ортиқ миқдорда кофеин ва (ёки) инсон организмига тонусни ўзгартирувчи таъсир кўрсатиш учун етарли миқдордаги бошқа компонентлар мавжуд бўлган ичимликлар\\" дейилади қонунда.","blocks":[{"type":"fragment","model":{"text":"\\"Энергетик ичимликлар - таркибида 150 мг/л.дан ортиқ миқдорда кофеин ва (ёки) инсон организмига тонусни ўзгартирувчи таъсир кўрсатиш учун етарли миқдордаги бошқа компонентлар мавжуд бўлган ичимликлар\\" дейилади қонунда.","attributes":[]},"id":"mock-id","position":[3,2,1]}]},"id":"mock-id","position":[3,2]},{"type":"paragraph","model":{"text":"Аммо одамлар энергетик ичимликлар аслида нима эканидан қанчалик хабардор? Уларнинг салбий ёки ижобий таъсирлари тўғрисида нималар маълум?","blocks":[{"type":"fragment","model":{"text":"Аммо одамлар энергетик ичимликлар аслида нима эканидан қанчалик хабардор? Уларнинг салбий ёки ижобий таъсирлари тўғрисида нималар маълум?","attributes":[]},"id":"mock-id","position":[3,3,1]}]},"id":"mock-id","position":[3,3]},{"type":"paragraph","model":{"text":"Ҳозирда энергетик ичимликларнинг саломатликка таъсири борасида турли бир-бирига зид қарашлар мавжуд.","blocks":[{"type":"fragment","model":{"text":"Ҳозирда энергетик ичимликларнинг саломатликка таъсири борасида турли бир-бирига зид қарашлар мавжуд.","attributes":[]},"id":"mock-id","position":[3,4,1]}]},"id":"mock-id","position":[3,4]}]},"id":"mock-id","position":[3]}]}},"promo":{"headlines":{"seoHeadline":"Ўзбекистон: «Энергетик таъмли ичимлик» нима ўзи?"},"locators":{"optimoUrn":"urn:bbc:optimo:asset:cxj3rjxm6r0o"},"summary":"","timestamp":1562942064846,"id":"mock-id","type":"cps"},"relatedContent":{"site":{"subType":"site","name":"Uzbek","uri":"/uzbek","type":"simple"},"groups":[]}},"path":"/uzbek/articles/cxj3rjxm6r0o","timeOnServer": "mock-time"}
    </script>
    <div>
      <!--[if !IE]><!-->
    </div>
    <script id="__LOADABLE_REQUIRED_CHUNKS__"
            type="text/javascript"
            crossorigin="anonymous"
            defer
    >
      [45]
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-253ae210.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-0f485567.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-1f20a385.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-678f84af.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/vendor-10e2e882.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-d0ae3f07.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="main"
            src="http://localhost:7080/static/js/main-f71cff67.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <script async
            data-chunk="uzbek"
            src="http://localhost:7080/static/js/uzbek-31ecd969.js"
            crossorigin="anonymous"
            type="text/javascript"
            defer
    >
    </script>
    <div>
    </div>
    <script type="text/javascript">
      document.documentElement.classList.remove("no-js");
    </script>
  </body>
</html>
`;
